Fixed page alignment/padding

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,6 +6,10 @@ body {
   margin: 0px auto;
 }
 
+#app {
+  padding: 10px;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Linux Libertine','Georgia','Times',serif;
 }
@@ -22,7 +26,6 @@ h3 {
 header {
   display: flex;
   align-items: center;
-  padding: 10px;
 }
 
 header h1 {
@@ -44,6 +47,10 @@ header .player::before {
 
 header .room::before {
   content: url('/static/images/room.svg');
+}
+
+content {
+  padding: 10px;
 }
 
 form {
